[package]
name = "web-nse"
version = "0.1.0"
authors = ["ikcilrep <frajerzycki@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
rand = "0.7"
num-traits = "0.2"
num-bigint = { version = "0.3", features = ["rand"] }
hkdf = "0.9"
sha2 = "0.9.1"